implement set password ui & modal information

--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -1,13 +1,18 @@
 {
-    "FORGOT_PASSWORD": "Lupa Password",
-    "CHANGE_PASSWORD": "Ubah Password",
-    "EMAIL_ADDRESS": "Alamat Email",
-    "REQUEST_OTP_INTRO": "Masukkan alamat email Anda dan OTP akan dikirim ke email Anda",
-    "YOUR_EMAIL_ADDRESS": "Alamat Email anda",
-    "YOUR_PASSWORD": "Password anda",
-    "GET_OTP": "Dapatkan OTP",
-    "NEW_HERE": "Baru Disini",
-    "REGISTER_NOW": "Daftar Sekarang",
-    "VERIFY_OTP_INTRO": "Masukkan OTP yang telah dikirim ke alamat email Anda",
-    "ENTER_OTP": "Masukkan OTP"
+  "FORGOT_PASSWORD": "Lupa Password",
+  "CHANGE_PASSWORD": "Ubah Password",
+  "EMAIL_ADDRESS": "Alamat Email",
+  "REQUEST_OTP_INTRO": "Masukkan alamat email Anda dan OTP akan dikirim ke email Anda",
+  "YOUR_EMAIL_ADDRESS": "Alamat Email anda",
+  "YOUR_PASSWORD": "Password anda",
+  "GET_OTP": "Dapatkan OTP",
+  "NEW_HERE": "Baru Disini",
+  "REGISTER_NOW": "Daftar Sekarang",
+  "VERIFY_OTP_INTRO": "Masukkan OTP yang telah dikirim ke alamat email Anda",
+  "ENTER_OTP": "Masukkan OTP",
+  "LOGIN": "Login",
+  "NEW_PASSWORD": "Password Baru",
+  "VERIFY_NEW_PASSWORD": "Konfirmasi Password Baru",
+  "CHANGE_PASSWORD_SUCCESS_TITLE": "Ubah Password Berhasil",
+  "CHANGE_PASSWORD_SUCCESS_MESSAGE": "Password Anda telah diubah. Sekarang login dengan password baru Anda"
 }
