--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -1,13 +1,18 @@
 {
-    "FORGOT_PASSWORD": "Forgot Password",
-    "CHANGE_PASSWORD": "Change Password",
-    "EMAIL_ADDRESS": "E-mail Address",
-    "REQUEST_OTP_INTRO": "Enter your email address and an OTP will be sent to your email",
-    "YOUR_EMAIL_ADDRESS": "Your E-mail Address",
-    "YOUR_PASSWORD": "Your Password",
-    "GET_OTP": "Get OTP",
-    "NEW_HERE": "New Here",
-    "REGISTER_NOW": "Register Now",
-    "VERIFY_OTP_INTRO": "Enter the OTP has been sent to your email address",
-    "ENTER_OTP": "Enter OTP"
+  "FORGOT_PASSWORD": "Forgot Password",
+  "CHANGE_PASSWORD": "Change Password",
+  "EMAIL_ADDRESS": "E-mail Address",
+  "REQUEST_OTP_INTRO": "Enter your email address and an OTP will be sent to your email",
+  "YOUR_EMAIL_ADDRESS": "Your E-mail Address",
+  "YOUR_PASSWORD": "Your Password",
+  "GET_OTP": "Get OTP",
+  "NEW_HERE": "New Here",
+  "REGISTER_NOW": "Register Now",
+  "VERIFY_OTP_INTRO": "Enter the OTP has been sent to your email address",
+  "ENTER_OTP": "Enter OTP",
+  "LOGIN": "Login",
+  "NEW_PASSWORD": "New Password",
+  "VERIFY_NEW_PASSWORD": "Verify New Password",
+  "CHANGE_PASSWORD_SUCCESS_TITLE": "Change Password Successful",
+  "CHANGE_PASSWORD_SUCCESS_MESSAGE": "Your Password has been changed. Now login with your new password"
 }
