--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -38,14 +38,14 @@
   "DOB": "Date of Birth",
   "PASSWORD": "Password",
   "VERIFY_PASSWORD": "Verify Password",
-  "VERIGY_PASSWORD_PLACEHOLDER": "Your Verify Password",
+  "VERIFY_PASSWORD_PLACEHOLDER": "Your Verify Password",
   "NEXT": "Next",
   "DELIVERY_ADDRESS": "Delivery Address",
   "PIN_LOCATION": "Pin Location",
   "ADDRESS_DETAIL": "Address Detail",
   "ADDRESS_DETAIL_PLACEHOLDER": "Your Address Detail",
   "PROVINCE": "Province",
-  "PROVINCE_PLACEHOLER": "Select Province",
+  "PROVINCE_PLACEHOLDER": "Select Province",
   "CITY": "City",
   "CITY_PLACEHOLDER": "Select City",
   "DISTRICT": "District",
@@ -61,5 +61,8 @@
   "VALIDATOR_NUM": "Only numeric are allowed",
   "VALIDATOR_URL": "Only URL are allowed (ex: www.example.com)",
   "VALIDATOR_EMAIL": "Please input correct email format (ex: someone@example.com)",
-  "VALIDATOR_PHONE": "Please input correct phone number format (ex: 08123456789)"
+  "VALIDATOR_PHONE": "Please input correct phone number format (ex: 08123456789)",
+  "VALIDATOR_PASSWORD_COMPARE": "Password not match",
+  "VALIDATOR_MIN": "Minimum length is",
+  "VALIDATOR_MAX": "Maximum length is"
 }
