--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -64,5 +64,18 @@
   "VALIDATOR_PHONE": "Please input correct phone number format (ex: 08123456789)",
   "VALIDATOR_PASSWORD_COMPARE": "Password not match",
   "VALIDATOR_MIN": "Minimum length is",
-  "VALIDATOR_MAX": "Maximum length is"
+  "VALIDATOR_MAX": "Maximum length is",
+  "PHONE_EMAIL_TAKEN": "Phone or email already taken",
+  "VERIFY_EMAIL_HEADER": "Verify Email",
+  "VERIFY_EMAIL_BODY": "You will get an extra point whenever you verify your email. Verify now?",
+  "SKIP": "Skip",
+  "VERIFY": "Verify",
+  "CLOSE_CONFIRM": "Are you sure you want to close this modal?",
+  "CANCEL": "Cancel",
+  "OTP_WORDING": "Please enter OTP code that has been sent to your email, you may want to check your spam",
+  "RESEND_OTP": "Resend OTP Code to email",
+  "EMAIL_OTP_SUCCESS": "Email verification success",
+  "BACK_HOME": "Back to Home",
+  "SUCCESS": "Success"
+  
 }
