--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -64,5 +64,17 @@
   "VALIDATOR_PHONE": "Silahkan input format nomot telepon yang benar (cth: 08123456789)",
   "VALIDATOR_PASSWORD_COMPARE": "Password tidak sama",
   "VALIDATOR_MIN": "Minimal karakter adalah",
-  "VALIDATOR_MAX": "Maksimal karakter adalah"
+  "VALIDATOR_MAX": "Maksimal karakter adalah",
+  "PHONE_EMAIL_TAKEN": "Nomor telepon atau email sudah terdaftar",
+  "VERIFY_EMAIL_HEADER": "Verifikasi Email",
+  "VERIFY_EMAIL_BODY": "Anda akan mendapatkan tambahan poin apabila anda verifikasi email Anda. Verifikasi sekarang?",
+  "SKIP": "Lewati",
+  "VERIFY": "Verifikasi",
+  "CLOSE_CONFIRM": "Apakah Anda yakin ingin menutup modal ini?",
+  "CANCEL": "Batal",
+  "OTP_WORDING": "Silahkan masukkan kode OTP yang telah kami kirimkan melalui email, mungkin Anda juga harus cek folder spam pada email Anda",
+  "RESEND_OTP": "Kirim ulang kode OTP ke email",
+  "EMAIL_OTP_SUCCESS": "Verifikasi email berhasil",
+  "BACK_HOME": "Kembali ke Beranda",
+  "SUCCESS": "Berhasil"
 }
