--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -76,6 +76,7 @@
   "RESEND_OTP": "Resend OTP Code to email",
   "EMAIL_OTP_SUCCESS": "Email verification success",
   "BACK_HOME": "Back to Home",
-  "SUCCESS": "Success"
+  "SUCCESS": "Success",
+  "OTP_FAILED": "Verification failed, OTP code not valid"
   
 }
