--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -78,5 +78,14 @@
   "EMAIL_OTP_SUCCESS": "Email verification success",
   "BACK_HOME": "Back to Home",
   "SUCCESS": "Success",
-  "OTP_FAILED": "Verification failed, OTP code not valid"
+  "OTP_FAILED": "Verification failed, OTP code not valid",
+  "MY_PROFILE": "My Profile",
+  "VIEW_QR": "View QR",
+  "EDIT_PROFILE": "Edit Profile",
+  "ADDRESS_LIST": "Address List",
+  "ARTICLE": "Article",
+  "LANGUAGE": "Language",
+  "PRIVACY_POLICY": "Privacy Policy",
+  "TERMS_CONDITIONS": "Terms and Conditions",
+  "HELP_CENTER": "Help Center"
 }
