--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -78,5 +78,14 @@
   "EMAIL_OTP_SUCCESS": "Verifikasi email berhasil",
   "BACK_HOME": "Kembali ke Beranda",
   "SUCCESS": "Berhasil",
-  "OTP_FAILED": "Verifikasi gagal, kode OTP tidak valid"
+  "OTP_FAILED": "Verifikasi gagal, kode OTP tidak valid",
+  "MY_PROFILE": "Profil Saya",
+  "VIEW_QR": "Lihat QR",
+  "EDIT_PROFILE": "Ubah Profil",
+  "ADDRESS_LIST": "Daftar Alamat",
+  "ARTICLE": "Artikel",
+  "LANGUAGE": "Bahasa",
+  "PRIVACY_POLICY": "Kebijakan Pribadi",
+  "TERMS_CONDITIONS": "Syarat dan Ketentuan",
+  "HELP_CENTER": "Pusat Bantuan"
 }
