form validation and logic for edit profile

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -87,5 +87,6 @@
   "LANGUAGE": "Language",
   "PRIVACY_POLICY": "Privacy Policy",
   "TERMS_CONDITIONS": "Terms and Conditions",
-  "HELP_CENTER": "Help Center"
+  "HELP_CENTER": "Help Center",
+  "UPDATE": "Update"
 }
