--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -87,5 +87,6 @@
   "LANGUAGE": "Bahasa",
   "PRIVACY_POLICY": "Kebijakan Pribadi",
   "TERMS_CONDITIONS": "Syarat dan Ketentuan",
-  "HELP_CENTER": "Pusat Bantuan"
+  "HELP_CENTER": "Pusat Bantuan",
+  "UPDATE": "Perbarui"
 }
