product detail's CTA show toast, update i18n

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -99,5 +99,13 @@
   "UPDATE": "Update",
   "SHOW_QR": "Show QR",
   "SCAN_QR": "Scan QR",
-  "ALERT_CAM_DENIED": "You need to grant access to device camera to access this feature"
+  "ALERT_CAM_DENIED": "You need to grant access to device camera to access this feature",
+  "ADD_TO_CART": "Add to Cart",
+  "DESCRIPTION": "Description",
+  "RELATED_PRODUCT": "Related Product",
+  "SUCCESS_ADD_FAVORITE": "Success add to favorite",
+  "SUCCESS_REMOVE_FAVORITE": "Success remove from favorite",
+  "SUCCESS_ADD_TO_CART": "Success add to cart"
+  
+
 }
