--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -108,5 +108,8 @@
   "RELATED_PRODUCT": "Produk Terkait",
   "SUCCESS_ADD_FAVORITE": "Berhasil menambahkan favorit",
   "SUCCESS_REMOVE_FAVORITE": "Berhasil melepas favorit",
-  "SUCCESS_ADD_TO_CART": "Berhasil dimasukkan ke keranjang"
+  "SUCCESS_ADD_TO_CART": "Berhasil dimasukkan ke keranjang",
+  "NEW_LIST": "Daftar Baru",
+  "LIST_NAME": "Nama",
+  "ADD_LIST": "Tambah Daftar"
 }
