--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -111,5 +111,20 @@
   "SUCCESS_ADD_TO_CART": "Success add to cart",
   "MY_CART": "My Cart",
   "CHECKOUT": "Checkout",
-  "TOTAL_PRICE": "Total Price"
+  "TOTAL_PRICE": "Total Price",
+  "DELIVERY_LOCATION": "Delivery Location",
+  "CHANGE_DELIVERY_LOCATION": "Change Delivery Location",
+  "LOCATION_DETAIL": "Location Detail",
+  "LOCATION_DETAIL_PLACEHOLDER": "Your location detail",
+  "DELIVERY_TIME": "Delivery Time",
+  "DELIVER_NOW": "Deliver Now",
+  "SCHEDULE_FOR_LATER": "Schedule for Later",
+  "SELECT_DATE": "Select Date",
+  "PAYMENT_SUMMARY": "Payment Summary",
+  "SUBTOTAL": "Subtotal",
+  "SERVICE_FEE": "Service Fee",
+  "VOUCHER": "Voucher",
+  "USE_VOUCHER": "User Voucher",
+  "DELIVERY_FEE": "Delivery Fee",
+  "PROCEED_TO_PAYMENT": "Proceed to Payment"
 }
