--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -131,5 +131,7 @@
   "VOUCHER": "Voucher",
   "USE_VOUCHER": "Use Voucher",
   "DELIVERY_FEE": "Delivery Fee",
-  "PROCEED_TO_PAYMENT": "Proceed to Payment"
+  "PROCEED_TO_PAYMENT": "Proceed to Payment",
+  "CHOOSE_LOCATION": "Choose Location",
+  "SELECT": "Select"
 }
