--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -131,5 +131,7 @@
   "VOUCHER": "Voucher",
   "USE_VOUCHER": "Gunakan Voucher",
   "DELIVERY_FEE": "Biaya Pengiriman",
-  "PROCEED_TO_PAYMENT": "Lanjut ke Pembayaran"
+  "PROCEED_TO_PAYMENT": "Lanjut ke Pembayaran",
+  "CHOOSE_LOCATION": "Pilih Lokasi",
+  "SELECT": "Pilih"
 }
