qr code translation

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -136,5 +136,6 @@
   "USE_ADDRESS": "Use Address",
   "SELECTED": "Selected",
   "CHOOSE_LOCATION": "Choose Location",
-  "SELECT": "Select"
+  "SELECT": "Select",
+  "YOUR_QR_CODE": "Your QR Code"
 }
