--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -136,5 +136,6 @@
   "USE_ADDRESS": "Gunakan Alamat",
   "SELECTED": "Dipilih",
   "CHOOSE_LOCATION": "Pilih Lokasi",
-  "SELECT": "Pilih"
+  "SELECT": "Pilih",
+  "YOUR_QR_CODE": "Kode QR Anda"
 }
