--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -137,5 +137,6 @@
   "SELECTED": "Dipilih",
   "CHOOSE_LOCATION": "Pilih Lokasi",
   "SELECT": "Pilih",
-  "YOUR_QR_CODE": "Kode QR Anda"
+  "YOUR_QR_CODE": "Kode QR Anda",
+  "UPDATE_ADDRESS": "Update Adress"
 }
