update profile menu list

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -138,5 +138,6 @@
   "CHOOSE_LOCATION": "Choose Location",
   "SELECT": "Select",
   "YOUR_QR_CODE": "Your QR Code",
-  "UPDATE_ADDRESS": "Update Adress"
+  "UPDATE_ADDRESS": "Update Adress",
+  "SHARE_MY_APP": "Share My App"
 }
