--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -138,5 +138,6 @@
   "CHOOSE_LOCATION": "Pilih Lokasi",
   "SELECT": "Pilih",
   "YOUR_QR_CODE": "Kode QR Anda",
-  "UPDATE_ADDRESS": "Update Adress"
+  "UPDATE_ADDRESS": "Update Adress",
+  "SHARE_MY_APP": "Share My App"
 }
