modal phone otp, modal email verification, adjust registration flow

--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -73,8 +73,8 @@
   "VERIFY": "Verifikasi",
   "CLOSE_CONFIRM": "Apakah Anda yakin ingin menutup modal ini?",
   "CANCEL": "Batal",
-  "OTP_WORDING": "Silahkan masukkan kode OTP yang telah kami kirimkan melalui email, mungkin Anda juga harus cek folder spam pada email Anda",
-  "RESEND_OTP": "Kirim ulang kode OTP ke email",
+  "OTP_WORDING": "Silahkan masukkan kode OTP yang telah kami kirimkan ke perangkat Anda",
+  "RESEND_OTP": "Kirim ulang kode OTP",
   "EMAIL_OTP_SUCCESS": "Verifikasi email berhasil",
   "BACK_HOME": "Kembali ke Beranda",
   "SUCCESS": "Berhasil",
