--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -73,8 +73,8 @@
   "VERIFY": "Verify",
   "CLOSE_CONFIRM": "Are you sure you want to close this modal?",
   "CANCEL": "Cancel",
-  "OTP_WORDING": "Please enter OTP code that has been sent to your email, you may want to check your spam",
-  "RESEND_OTP": "Resend OTP Code to email",
+  "OTP_WORDING": "Please enter OTP code that has been sent to your phone",
+  "RESEND_OTP": "Resend OTP",
   "EMAIL_OTP_SUCCESS": "Email verification success",
   "BACK_HOME": "Back to Home",
   "SUCCESS": "Success",
@@ -150,5 +150,13 @@
   "SET_DEFAULT": "Set as Default",
   "DEFAULT_ADDRESS": "Default Address",
   "SELECT_ADDRESS": "Select Address",
-  "DELETE_ADDRESS_CONFIRM": "Are you sure you want to delete this address?"
+  "DELETE_ADDRESS_CONFIRM": "Are you sure you want to delete this address?",
+  "PERSONAL_INFORMATION": "Personal Information",
+  "DELIVERY_INFORMATION" : "Delivery Information",
+  "VERIFY_PHONE_NUMBER" : "Verify Phone Number",
+  "PHONE_NUMBER_VERIFIED": "Your Phone Number is Verified!",
+  "WELCOME_KLIKGO": "Welcome to KlikGo!",
+  "VERIFY_EMAIL": "Verify Email",
+  "EMAIL_VERIFICATION_SENT": "Email verification sent!",
+  "EMAIL_VERIFICATION_WORDING": "We send you a verification message to your email. Please check your email"
 }
