--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -150,5 +150,13 @@
   "SET_DEFAULT": "Tetapkan Default",
   "DEFAULT_ADDRESS": "Alamat Default",
   "SELECT_ADDRESS": "Pilih Alamat",
-  "DELETE_ADDRESS_CONFIRM": "Apakah Anda yakin ingin menghapus alamat ini?"
+  "DELETE_ADDRESS_CONFIRM": "Apakah Anda yakin ingin menghapus alamat ini?",
+  "PERSONAL_INFORMATION": "Informasi Data Diri",
+  "DELIVERY_INFORMATION" : "Informasi Pengiriman",
+  "VERIFY_PHONE_NUMBER" : "Verifikasi Nomor Ponsel",
+  "PHONE_NUMBER_VERIFIED": "Nomor Ponsel Anda Telah Terverifikasi",
+  "WELCOME_KLIKGO": "Selamat Datang di KlikGo!",
+  "VERIFY_EMAIL": "Verifikasi Email",
+  "EMAIL_VERIFICATION_SENT": "Email verifikasi terkirim!",
+  "EMAIL_VERIFICATION_WORDING": "Kami telah mengiriman pesan verifikasi ke email Anda. Silahkan cek email Anda"
 }
