--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -158,5 +158,12 @@
   "WELCOME_KLIKGO": "Selamat Datang di KlikGo!",
   "VERIFY_EMAIL": "Verifikasi Email",
   "EMAIL_VERIFICATION_SENT": "Email verifikasi terkirim!",
-  "EMAIL_VERIFICATION_WORDING": "Kami telah mengiriman pesan verifikasi ke email Anda. Silahkan cek email Anda"
+  "EMAIL_VERIFICATION_WORDING": "Kami telah mengiriman pesan verifikasi ke email Anda. Silahkan cek email Anda",
+  "REMOVE_CART_ITEM_CONFIRM": "Apakah Anda yakin ingin menghapus barang ini dari keranjang?",
+  "SEARCH": "Cari",
+  "SIZE": "Ukuran",
+  "PRIMARY": "Utama",
+  "EDIT_ADDRESS": "Ubah Alamat",
+  "DELETE_ADDRESS": "Hapus Address",
+  "MY_ORDERS": "Pesanan Saya"
 }
