--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -152,11 +152,13 @@
   "SELECT_ADDRESS": "Select Address",
   "DELETE_ADDRESS_CONFIRM": "Are you sure you want to delete this address?",
   "PERSONAL_INFORMATION": "Personal Information",
-  "DELIVERY_INFORMATION" : "Delivery Information",
-  "VERIFY_PHONE_NUMBER" : "Verify Phone Number",
+  "DELIVERY_INFORMATION": "Delivery Information",
+  "VERIFY_PHONE_NUMBER": "Verify Phone Number",
   "PHONE_NUMBER_VERIFIED": "Your Phone Number is Verified!",
   "WELCOME_KLIKGO": "Welcome to KlikGo!",
   "VERIFY_EMAIL": "Verify Email",
   "EMAIL_VERIFICATION_SENT": "Email verification sent!",
-  "EMAIL_VERIFICATION_WORDING": "We send you a verification message to your email. Please check your email"
+  "EMAIL_VERIFICATION_WORDING": "We send you a verification message to your email. Please check your email",
+  "SEARCH": "Search",
+  "SEARCH_RESULT": "Search Result"
 }
