--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -160,5 +160,8 @@
   "EMAIL_VERIFICATION_SENT": "Email verifikasi terkirim!",
   "EMAIL_VERIFICATION_WORDING": "Kami telah mengiriman pesan verifikasi ke email Anda. Silahkan cek email Anda",
   "SEARCH": "Pencarian",
-  "SEARCH_RESULT": "Hasil Pencarian"
+  "SEARCH_RESULT": "Hasil Pencarian",
+  "PRICE": "Harga",
+  "HIGHEST": "Tertinggi",
+  "LOWEST": "Terendah"
 }
