Adjust home styling, install font family Metropolis

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "CATEGORIES": "Categories",
   "FORGOT_PASSWORD": "Forgot Password",
   "CHANGE_PASSWORD": "Change Password",
   "EMAIL_ADDRESS": "E-mail Address",
