Apply styling to authentication flow

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -6,7 +6,7 @@
   "REQUEST_OTP_INTRO": "Enter your email address and an OTP will be sent to your email",
   "YOUR_EMAIL_ADDRESS": "Your E-mail Address",
   "YOUR_PASSWORD": "Your Password",
-  "GET_OTP": "Get OTP",
+  "GET_OTP": "Send Email",
   "NEW_HERE": "New Here",
   "REGISTER_NOW": "Register Now",
   "VERIFY_OTP_INTRO": "Enter the OTP has been sent to your email address",
@@ -30,7 +30,7 @@
   "REGISTER": "Register",
   "STEP": "Step",
   "NAME": "Name",
-  "NAME_PLACEHOLDER": "Your Name",
+  "NAME_PLACEHOLDER": "Full Name",
   "PHONE_NUMBER": "Phone Number",
   "PHONE_NUMBER_PLACEHOLDER": "Your Phone Number",
   "GENDER": "Gender",
