--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -173,5 +173,9 @@
   "MY_ORDERS": "Pesanan Saya",
   "POPULARITY": "Popularitas",
   "LOWEST_TO_HIGHEST_PRICE": "Harga Terendah",
-  "HIGHEST_TO_LOWEST_PRICE": "Harga Tertinggi"
+  "HIGHEST_TO_LOWEST_PRICE": "Harga Tertinggi",
+  "VOUCHER_LIST": "Daftar Voucher",
+  "VALID_UNTIL": "Berlaku hingga",
+  "VOUCHER_CODE": "Kode Voucher",
+  "VALIDITY": "Masa Berlaku"
 }
