--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -177,5 +177,7 @@
   "VOUCHER_LIST": "Daftar Voucher",
   "VALID_UNTIL": "Berlaku hingga",
   "VOUCHER_CODE": "Kode Voucher",
-  "VALIDITY": "Masa Berlaku"
+  "VALIDITY": "Masa Berlaku",
+  "SHARE_MESSAGE": "Salin tautan di bawah dan bagikan KlikGO dengan teman-teman Anda!",
+  "COPIED_SUCCESS": "Berhasil disalin"
 }
