--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -180,5 +180,9 @@
   "VOUCHER_CODE": "Voucher Code",
   "VALIDITY": "Validity",
   "SHARE_MESSAGE": "Copy the link below and share KlikGO with your friends!",
-  "COPIED_SUCCESS": "Copied successfully"
+  "COPIED_SUCCESS": "Copied successfully",
+  "CHAT": "Chat",
+  "CHAT_SUBTITLE": "Chat with our Customer Service via WhatsApp!",
+  "CHAT_MESSAGE": "If you have any questions regarding KilkGo, you can click the link below and chat with our customer service.",
+  "CHAT_VIA_WHATSAPP": "Chat Via Whatsapp"
 }
