--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -138,8 +138,9 @@
   "SELECTED": "Selected",
   "CHOOSE_LOCATION": "Choose Location",
   "SELECT": "Select",
+  "SAVE": "Save",
   "YOUR_QR_CODE": "Your QR Code",
-  "UPDATE_ADDRESS": "Update Adress",
+  "UPDATE_ADDRESS": "Update Address",
   "SHARE_MY_APP": "Share My App",
   "PROFILE_PICTURE": "Profile Picture",
   "CHANGE": "Change",
@@ -148,7 +149,7 @@
   "TAKE_A_PHOTO": "Take a Photo",
   "RECEIVER_NAME": "Receiver Name",
   "RECEIVER_NAME_PLACEHOLDER": "Your Receiver Name",
-  "SET_DEFAULT": "Set as Default",
+  "SET_DEFAULT": "Set as Default Address",
   "DEFAULT_ADDRESS": "Default Address",
   "SELECT_ADDRESS": "Select Address",
   "DELETE_ADDRESS_CONFIRM": "Are you sure you want to delete this address?",
