--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -175,5 +175,6 @@
   "MY_ORDERS": "My Orders",
   "POPULARITY": "Popularity",
   "LOWEST_TO_HIGHEST_PRICE": "Lowest to Highest Price",
-  "HIGHEST_TO_LOWEST_PRICE": "Highest to Lowest Price"
+  "HIGHEST_TO_LOWEST_PRICE": "Highest to Lowest Price",
+  "CART_EXTRA" : "In Case You Missed It"
 }
