--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -176,7 +176,7 @@
   "POPULARITY": "Popularity",
   "LOWEST_TO_HIGHEST_PRICE": "Lowest to Highest Price",
   "HIGHEST_TO_LOWEST_PRICE": "Highest to Lowest Price",
-  "CART_EXTRA" : "In Case You Missed It",
+  "CART_EXTRA": "In Case You Missed It",
   "VOUCHER_LIST": "Voucher List",
   "VALID_UNTIL": "Valid until",
   "VOUCHER_CODE": "Voucher Code",
@@ -186,5 +186,15 @@
   "CHAT": "Chat",
   "CHAT_SUBTITLE": "Chat with our Customer Service via WhatsApp!",
   "CHAT_MESSAGE": "If you have any questions regarding KilkGo, you can click the link below and chat with our customer service.",
-  "CHAT_VIA_WHATSAPP": "Chat Via Whatsapp"
+  "CHAT_VIA_WHATSAPP": "Chat Via Whatsapp",
+  "MY_ORDER": "My Order",
+  "ON_GOING": "On Going",
+  "HISTORY": "History",
+  "ORDER_ID": "Order ID",
+  "ORDER_DATE": "Order Date",
+  "ORDER_STATUS": "Order Status",
+  "PAYMENT_METHOD": "Payment Method",
+  "TOTAL_PAYMENT": "Total Payment",
+  "SEE_DETAIL": "See Detail",
+  "ORDER_ARRIVED": "Order Arrived"
 }
