implement confirm modal for confirm order

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -196,5 +196,6 @@
   "PAYMENT_METHOD": "Payment Method",
   "TOTAL_PAYMENT": "Total Payment",
   "SEE_DETAIL": "See Detail",
-  "ORDER_ARRIVED": "Order Arrived"
+  "ORDER_ARRIVED": "Order Arrived",
+  "ORDER_ARRIVED_MESSAGE": "Have you received your order?"
 }
