--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -197,5 +197,15 @@
   "TOTAL_PAYMENT": "Total Payment",
   "SEE_DETAIL": "See Detail",
   "ORDER_ARRIVED": "Order Arrived",
-  "ORDER_ARRIVED_MESSAGE": "Have you received your order?"
+  "ORDER_ARRIVED_MESSAGE": "Have you received your order?",
+  "ORDER_DETAIL": "Order Detail",
+  "WAITING_FOR_PAYMENT": "Waiting for Payment",
+  "WAITING_FOR_CONFIRMATION": "Waiting for Confirmation",
+  "ORDER_IN_PROCESS": "Order In Process",
+  "ORDER_SENT": "Order Sent",
+  "ORDER_COMPLETED": "Order Completed",
+  "DISCOUNT": "Discount",
+  "RECIPIENT_ADDRESS": "Recipient Address",
+  "ESTIMATED_ARRIVAL": "Estimated Arrival",
+  "UPLOAD_PAYMENT_PROOF": "Upload Payment Proof"
 }
