Integrate article API,list, and detail

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -135,6 +135,7 @@
   "PROCEED_TO_PAYMENT": "Proceed to Payment",
   "ADD_NEW_ADDRESS": "Add New Address",
   "USE_ADDRESS": "Use Address",
+  "ARTICLE_TITLE": "KlikGO Article",
   "SELECTED": "Selected",
   "CHOOSE_LOCATION": "Choose Location",
   "SELECT": "Select",
