Adjust inbox and notif page, adjust searchbar

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -86,6 +86,7 @@
   "CLEAR_RECENT": "Clear Recent",
   "FILTER": "Filter",
   "SORT": "Sort",
+  "INBOX": "Inbox",
   "RELATED_ITEMS": "Related Items",
   "RELATED_BRAND": "Related Brand",
   "MY_PROFILE": "My Profile",
