add checkbox select all to favorite detail

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -219,5 +219,6 @@
   "PAYMENT": "Payment",
   "COD": "Cash On Delivery",
   "PAY": "Pay",
-  "COD_MESSAGE": "Please fill in the exact amount of cash you'll provide"
+  "COD_MESSAGE": "Please fill in the exact amount of cash you'll provide",
+  "SELECT_ALL": "Select All"
 }
