--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -211,5 +211,6 @@
   "MANUAL_BANK_TRANSFER": "Manual Bank Transfer",
   "COD": "Cash On Delivery",
   "PAY": "Bayar",
-  "COD_MESSAGE": "Harap isi jumlah persis uang tunai yang akan Anda berikan"
+  "COD_MESSAGE": "Harap isi jumlah persis uang tunai yang akan Anda berikan",
+  "SELECT_ALL": "Pilih Semua"
 }
