Rename assets file

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -204,7 +204,7 @@
   "ORDER_ARRIVED": "Order Arrived",
   "ORDER_ARRIVED_MESSAGE": "Have you received your order?",
   "WAITING_PAYMENT": "Waiting for Payment",
-  "WAITING_FOR_CONFIRMATION": "Waiting for Confirmation",
+  "WAITING_CONFIRMATION": "Waiting for Confirmation",
   "ON_PROCESS": "Order In Process",
   "ORDER_SENT": "Order Sent",
   "ORDER_COMPLETED": "Order Completed",
@@ -217,6 +217,7 @@
   "CASH_ON_DELIVERY": "Cash On Delivery (COD)",
   "MANUAL_BANK_TRANSFER": "Manual Bank Transfer",
   "PAYMENT": "Payment",
+  "SENT": "Order Sent",
   "COD": "Cash On Delivery",
   "PAY": "Pay",
   "COD_MESSAGE": "Please fill in the exact amount of cash you'll provide",
