--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -85,10 +85,11 @@
   "RECENT_SEARCHES": "Recent Searches",
   "CLEAR_RECENT": "Clear Recent",
   "FILTER": "Filter",
-  "SORT": "Sort",
+  "SORT": "Sort by",
   "INBOX": "Inbox",
   "RELATED_ITEMS": "Related Items",
   "RELATED_BRAND": "Related Brand",
+  "PRICE_RANGE": "Price Range",
   "MY_PROFILE": "My Profile",
   "VIEW_QR": "View QR",
   "EDIT_PROFILE": "Edit Profile",
@@ -227,5 +228,6 @@
   "PAYMENT_PROOF_SENT": "Payment Proof Sent",
   "PAYMENT_PROOF_TITLE": "Please Wait",
   "PAYMENT_PROOF_MESSAGE": "Please wait, your payment is being reviewed.",
-  "ACTIVITY" : "Activity"
+  "ACTIVITY" : "Activity",
+  "CHECK_CART" : "Check Cart"
 }
