--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -226,5 +226,7 @@
   "HOW_TO_PAY": "How To Pay",
   "PAYMENT_PROOF_SENT": "Payment Proof Sent",
   "PAYMENT_PROOF_TITLE": "Please Wait",
-  "PAYMENT_PROOF_MESSAGE": "Please wait, your payment is being reviewed."
+  "PAYMENT_PROOF_MESSAGE": "Please wait, your payment is being reviewed.",
+  "SELECT_TIME_FIRST": "Choose the time first",
+  "VOUCHER_LIMIT": "The voucher cannot be used. Please read the terms and conditions or try another voucher code"
 }
