Integrate Help Page API + Angular Expandable

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -50,7 +50,9 @@
   "CITY": "City",
   "CITY_PLACEHOLDER": "Select City",
   "DISTRICT": "District",
+  "SUB_DISTRICT": "Sub District",
   "DISTRICT_PLACEHOLDER": "Select District",
+  "SUB_DISTRICT_PLACEHOLDER": "Select Sub District",
   "POSTAL_CODE": "Postal Code",
   "POSTAL_CODE_PLACEHOLDER": "Your Postal Code",
   "ADDRESS_NAME": "Address Name",
