--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -222,5 +222,6 @@
   "VOUCHER_LIMIT": "Voucher tidak dapat digunakan. Silakan baca syarat dan ketentuan atau coba kode voucher lain",
   "ACTIVITY": "Aktifitas",
   "CHECK_CART": "Periksa Keranjang",
-  "INVALID_OTP": "OTP tidak valid"
+  "INVALID_OTP": "OTP tidak valid",
+  "PROCEED_PAYMENT": "Lanjutkan Pembayaran"
 }
