generate inactive item list component and functionality

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -235,5 +235,7 @@
   "ACTIVITY": "Activity",
   "CHECK_CART": "Check Cart",
   "INVALID_OTP": "Invalid OTP",
-  "PROCEED_PAYMENT": "Proceed Payment"
+  "PROCEED_PAYMENT": "Proceed Payment",
+  "STOCK": "Stock",
+  "OUT_OF_STOCK": "Out of Stock"
 }
