Feature/minor design fix#3 (#86)
* Implement payment method styling, add stock < 5 label on product detail, add rename favorite group

* Adjust home page icon

* Adjust size

Co-authored-by: Jason <jasonjaputra@gmail.com>
Co-authored-by: Indra Abdulah <indra.abdullah99@gmail.com>

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -106,6 +106,7 @@
   "SCAN_QR": "Scan QR",
   "ALERT_CAM_DENIED": "You need to grant access to device camera to access this feature",
   "FAVORITES": "Favorites",
+  "ADD_IMAGE": "Add Image",
   "ADD_NEW_LIST": "Add New List",
   "SEE_LIST": "See List",
   "ADD_TO_CART": "Add to Cart",
