Feature/social login #1 (#89)
* implement deeplink & set forgot password

* set password page routing

* implement google login & register

* implement api check reset password token

* implement verify email

* fix calculate price on checkout page

* fix cache profile picture

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="app_name">Klikgo</string>
     <string name="title_activity_main">Klikgo</string>
     <string name="package_name">com.klikgo.klikgo</string>
-    <string name="custom_url_scheme">com.klikgo.klikgo</string>
-    <string name="server_client_id">682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com</string>
+    <string name="custom_url_scheme">klikgo</string>
+    <string name="custom_host_scheme">app.myklikgo.com</string>
+    <string name="server_client_id">852595832919-73lbej9udcco4jnpnuegraik09rmmbrh.apps.googleusercontent.com</string>
     <string name="facebook_app_id">1272637443123444</string>
     <string name="fb_login_protocol_scheme">fb1272637443123444</string>
   </resources>
